--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(./pics/Peaceful.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(pics/Peaceful.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -301,7 +301,7 @@ p {
 .cta {
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(./pics/Free\ Vector\ _\ Black\ memphis\ background\ with\ lines\ shapes.jpg); 
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(pics/Free\ Vector\ _\ Black\ memphis\ background\ with\ lines\ shapes.jpg); 
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -352,7 +352,7 @@ p {
 .sub-header{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,40,0.7),rgba(4,9,40,0.7)),url(./pics/Free\ \ Color\,\ Abstract\ Background\ Images\,\ Abstract\ Background\ Photo\ Background\ PNG\ and\ Vectors.jpg);
+    background-image: linear-gradient(rgba(4,9,40,0.7),rgba(4,9,40,0.7)),url(pics/Free\ \ Color\,\ Abstract\ Background\ Images\,\ Abstract\ Background\ Photo\ Background\ PNG\ and\ Vectors.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
