--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,1 +1,138 @@
-@import "{{ site.theme }}";
+// Variables
+$primary-color: #5f36f4;
+
+// Reset styles
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+// Header styles
+.header {
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+                      URL(pics/images1.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    
+    nav {
+        display: flex;
+        padding: 2% 6%;
+        justify-content: space-between;
+        align-items: center;
+        
+        img {
+            width: 150px;
+        }
+        
+        .nav-links {
+            flex: 1;
+            text-align: right;
+            
+            ul li {
+                list-style: none;
+                display: inline-block;
+                padding: 8px 12px;
+                position: relative;
+                
+                a {
+                    color: #fff;
+                    text-decoration: none;
+                    font-size: 13px;
+                }
+                
+                &:after {
+                    content: '';
+                    width: 0%;
+                    height: 2px;
+                    background: $primary-color;
+                    display: block;
+                    margin: auto;
+                    transition: 0.5s;
+                }
+                
+                &:hover:after {
+                    width: 100%;
+                }
+            }
+        }
+    }
+    
+    .text-box {
+        width: 90%;
+        color: #fff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        
+        h1 {
+            font-size: 62px;
+        }
+        
+        p {
+            margin: 10px 0 40px;
+            font-size: 14px;
+            color: #fff;
+        }
+        
+        .hero-btn {
+            display: inline-block;
+            text-decoration: none;
+            color: #fff;
+            border: 1px solid #fff;
+            padding: 12px 34px;
+            font-size: 13px;
+            background: transparent;
+            position: relative;
+            cursor: pointer;
+            
+            &:hover {
+                border: 1px solid #5f36f4;
+                background: #5f36f4;
+                transition: ls;
+            }
+        }
+    }
+}
+
+@media (max-width: 700px) {
+    .text-box h1 {
+        font-size: 20px;
+    }
+    
+    .nav-links ul li {
+        display: block;
+    }
+    
+    .nav-links {
+        position: fixed;
+        background: #5f36f4;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+    
+    nav .fa-solid {
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    
+    .nav-links ul {
+        padding: 30px;
+    }
+}
+
+/* Rest of your styles... */
+
