--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ p {
 .cta {
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/background.jpg); 
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/images1.jpg); 
     background-position: center;
     background-size: cover;
     border-radius: 10px;
