--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ p {
 .sub-header{
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,40,0.7),rgba(4,9,40,0.7)),URL(images/library background.jpg);
+    background-image: linear-gradient(rgba(4,9,40,0.7),rgba(4,9,40,0.7)),url(images/library background.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
